objects/Evaluation_Template__c.object
<CustomObject><fields>
        <fullName>ACF_Date_Type__c</fullName>
        <label>Date Type</label>
        <picklist>
            <picklistValues>
                <fullName>Absolute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Range</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Number_of_questions__c</fullName>
        <formula>IF( LEN(ACF_Question_1__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_2__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_3__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_4__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_5__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_6__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_7__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_8__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_9__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_10__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_11__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_12__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_13__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_14__c ) &gt; 0,1,0)+
IF( LEN(ACF_Question_15__c ) &gt; 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of questions asked. Used in Process Builder when building the evaluation record.</inlineHelpText>
        <label>Number of questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Q10_Category__c</fullName>
        <formula>TEXT( ACF_Question_10__r.ACF_Question_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q10 Category</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q10_Scale__c</fullName>
        <formula>IF ( 
NOT(ISBLANK(ACF_Question_10__r.ACF_Evaluation_Question__c)), 
ACF_Question_10__r.ACF_Scale__c, ""
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q10 Scale</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q10__c</fullName>
        <formula>IF ( 
NOT(ISBLANK(ACF_Question_10__r.ACF_Evaluation_Question__c)), 
"10. " + ACF_Question_10__r.ACF_Evaluation_Question__c 
,"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Q# + Question for display on template</inlineHelpText>
        <label>.</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q11_Category__c</fullName>
        <formula>TEXT( ACF_Question_11__r.ACF_Question_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q11 Category</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q11_Scale__c</fullName>
        <formula>IF ( 
NOT(ISBLANK(ACF_Question_11__r.ACF_Evaluation_Question__c)), 
ACF_Question_11__r.ACF_Scale__c, ""
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q11 Scale</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q11__c</fullName>
        <formula>IF ( 
NOT(ISBLANK(ACF_Question_11__r.ACF_Evaluation_Question__c)), 
"11. " + ACF_Question_11__r.ACF_Evaluation_Question__c, ""
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q12_Category__c</fullName>
        <formula>TEXT( ACF_Question_12__r.ACF_Question_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q12 Category</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q12_Scale__c</fullName>
        <formula>IF ( 
NOT(ISBLANK(ACF_Question_12__r.ACF_Evaluation_Question__c)), 
ACF_Question_12__r.ACF_Scale__c, ""
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q12 Scale</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q12__c</fullName>
        <formula>IF ( 
NOT(ISBLANK(ACF_Question_12__r.ACF_Evaluation_Question__c)), 
"12. " + ACF_Question_12__r.ACF_Evaluation_Question__c, ""
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>.</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Question_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question 10</label>
        <referenceTo>Evaluation_Question_Bank__c</referenceTo>
        <relationshipName>Eval_Template9</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Question_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question 11</label>
        <referenceTo>Evaluation_Question_Bank__c</referenceTo>
        <relationshipName>Eval_Template8QNy</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Question_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question 12</label>
        <referenceTo>Evaluation_Question_Bank__c</referenceTo>
        <relationshipName>Eval_Template8QO8</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Template_Title__c</fullName>
        <label>Template Title</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Junction object to support many:many relationship between the Eval Question Bank and the Evaluations ties to programs. Will be used to product the PDF Eval (paper) form and to create the Eval Answers records.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>EvaluationTemplate</label><nameField>
        <label>Evaluation Template Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Evaluation Template</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACF_Template_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>